[package]
name = "wasm-part"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
# web-sys = { version = "0.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = "0.5"
num-bigint = "0.4"
